# user-management

./: .gitignore  README.md
.github/scripts/: get_app_version_from_toml.sh
.github/workflows/: app-ci.yaml  cd.yaml  ci-cd.yaml  helm-ci.yaml  iac-ci.yaml
IaC/: infra-test.tftest.hcl  main.tf  provider.tf  variables.tf
app/: Dockerfile  README.md  docker-compose.yaml  init-aws.sh  pyproject.toml
app/src/: config.py  main.py
app/test/: integration_tests.py  unit_tests.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
